--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -18,7 +18,7 @@
         <form method="POST" enctype="multipart/form-data" id="signup-form">
             {% csrf_token %} {% bootstrap_form form %}
 
-            <input class="btn btn-default" type="submit" name="" value="Sign Up" disabled/>
+            <input class="btn btn-default" type="submit" name="" value="Sign Up" />
         </form>
     </div>
     <!-- end of block content -->
